[package]
name = "acme-client"
description = "Easy to use ACME client library to issue, renew and revoke TLS certificates"
version = "0.5.3"
authors = ["Onur Aslan <onur@onur.im>"]
license = "MIT"
keywords = ["letsencrypt", "acme"]
readme = "README.md"
documentation = "https://docs.rs/acme-client"
repository = "https://github.com/onur/acme-client"

[dependencies]
error-chain = "0.12"

# 日志相关组件
log = "0.4.7"
pretty_env_logger = "0.3.0"

serde = "1.0.97"
serde_derive = "1.0.97"
serde_json = "1.0.40"
base64 = "0.10.1"
hyper = "0.12.33"
reqwest = "0.9.19"
openssl = "0.10.24"
clap = { version = "2.33.0", optional = true }
env_logger = { version = "0.6.2", optional = true }
foreign-types = { version = "0.4.0", optional = true }
openssl-sys = { version = "0.9.48", optional = true }

[dev-dependencies]
#env_logger = "0.4"
env_logger = "0.6"

[[bin]]
name = "acme-client"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "env_logger", "openssl-sys", "foreign-types"]
